Part2/y.output
Terminals unused in grammar

   FUNCTION
   END
   RETURN
   INT
   EQUAL
   NOT
   LENGHT
   CONCATENATION
   ALTERNATION
   REPETITION
   SPACE
   NEWLINE
   AND
   OR
   PLUS
   MINUS
   MULTIPLICATION
   DIVISION


State 64 conflicts: 1 reduce/reduce
State 86 conflicts: 1 shift/reduce
State 89 conflicts: 1 reduce/reduce


Grammar

    0 $accept: entry $end

    1 entry: MAIN LPARAN RPARAN LBRACKET functionbody RBRACKET

    2 functionbody: stmt functionbody
    3             | stmt

    4 stmt: graph_definition

    5 graph_definition: DIRECTED IDENTIFIER LBRACKET component_list RBRACKET
    6                 | UNDIRECTED IDENTIFIER LBRACKET component_list RBRACKET

    7 component_list: component component_list
    8               | component

    9 component: vertex_declaration end
   10          | edge_declaration end
   11          | graph_object_declaration end
   12          | methodcall end
   13          | assignment end
   14          | conditional
   15          | loop
   16          | COMMENT

   17 vertex_declaration: VERTEX IDENTIFIER

   18 edge_declaration: EDGE IDENTIFIER

   19 graph_object_declaration: property

   20 property: PROPERTY IDENTIFIER ASSIGNMENT LPARAN property_stmt RPARAN

   21 methodcall: IDENTIFIER DOT INCLUDEPROPERTY LPARAN property_stmt
   22           | CONNECT LPARAN IDENTIFIER COMMA IDENTIFIER COMMA IDENTIFIER RPARAN

   23 assignment: %empty
   24           | VARIABLE ASSIGNMENT element

   25 conditional: if_cond
   26            | ifelse_cond

   27 if_cond: IFSTATEMENT LPARAN cond RPARAN LBRACKET component_list RBRACKET

   28 ifelse_cond: IFSTATEMENT LPARAN cond RPARAN LBRACKET component_list RBRACKET ELSESTATEMENT LBRACKET component_list RBRACKET

   29 cond: %empty
   30     | BOOLEAN
   31     | IDENTIFIER booleanopr element
   32     | element booleanopr IDENTIFIER
   33     | IDENTIFIER booleanopr IDENTIFIER

   34 booleanopr: ISEQUAL
   35           | GREATER
   36           | LESS
   37           | GREATEREQUAL
   38           | LESSEQUAL
   39           | NOTEQUAL

   40 loop: for
   41     | while

   42 for: FOR LPARAN assignment SEMICOLON cond SEMICOLON assignment RPARAN LBRACKET component_list RBRACKET

   43 while: WHILE LPARAN cond RPARAN LBRACKET component_list RBRACKET

   44 property_stmt: STRING COMMA element

   45 map: LBRACKET mapbody RBRACKET

   46 set: SLBRACKET setbody SRBRACKET

   47 list: SLBRACKET listbody SRBRACKET

   48 mapbody: mapbody COMMA map_tail
   49        | map_tail

   50 map_tail: STRING COLON element

   51 setbody: setbody COMMA list_tail
   52        | list_tail
   53        | %empty

   54 listbody: list COMMA list_tail
   55         | list_tail
   56         | %empty

   57 list_tail: element

   58 element: INTEGER
   59        | FLOAT
   60        | STRING
   61        | map
   62        | list
   63        | set

   64 end: SEMICOLON


Terminals, with rules where they appear

$end (0) 0
error (256)
COLON (258) 50
FUNCTION (259)
IFSTATEMENT (260) 27 28
ELSESTATEMENT (261) 28
END (262)
FOR (263) 42
WHILE (264) 43
RETURN (265)
IDENTIFIER (266) 5 6 17 18 20 21 22 31 32 33
COMMENT (267) 16
INT (268)
FLOAT (269) 59
STRING (270) 44 50 60
EQUAL (271)
SEMICOLON (272) 42 64
COMMA (273) 22 44 48 51 54
DOT (274) 21
SLBRACKET (275) 46 47
SRBRACKET (276) 46 47
NOT (277)
ASSIGNMENT (278) 20 24
CONNECT (279) 22
LENGHT (280)
INCLUDEPROPERTY (281) 21
MAIN (282) 1
PROPERTY (283) 20
VARIABLE (284) 24
VERTEX (285) 17
BOOLEAN (286) 30
DIRECTED (287) 5
UNDIRECTED (288) 6
EDGE (289) 18
LPARAN (290) 1 20 21 22 27 28 42 43
RPARAN (291) 1 20 22 27 28 42 43
LBRACKET (292) 1 5 6 27 28 42 43 45
RBRACKET (293) 1 5 6 27 28 42 43 45
INTEGER (294) 58
CONCATENATION (295)
ALTERNATION (296)
REPETITION (297)
SPACE (298)
NEWLINE (299)
AND (300)
OR (301)
ISEQUAL (302) 34
NOTEQUAL (303) 39
LESS (304) 36
GREATER (305) 35
LESSEQUAL (306) 38
GREATEREQUAL (307) 37
PLUS (308)
MINUS (309)
MULTIPLICATION (310)
DIVISION (311)


Nonterminals, with rules where they appear

$accept (57)
    on left: 0
entry (58)
    on left: 1, on right: 0
functionbody (59)
    on left: 2 3, on right: 1 2
stmt (60)
    on left: 4, on right: 2 3
graph_definition (61)
    on left: 5 6, on right: 4
component_list (62)
    on left: 7 8, on right: 5 6 7 27 28 42 43
component (63)
    on left: 9 10 11 12 13 14 15 16, on right: 7 8
vertex_declaration (64)
    on left: 17, on right: 9
edge_declaration (65)
    on left: 18, on right: 10
graph_object_declaration (66)
    on left: 19, on right: 11
property (67)
    on left: 20, on right: 19
methodcall (68)
    on left: 21 22, on right: 12
assignment (69)
    on left: 23 24, on right: 13 42
conditional (70)
    on left: 25 26, on right: 14
if_cond (71)
    on left: 27, on right: 25
ifelse_cond (72)
    on left: 28, on right: 26
cond (73)
    on left: 29 30 31 32 33, on right: 27 28 42 43
booleanopr (74)
    on left: 34 35 36 37 38 39, on right: 31 32 33
loop (75)
    on left: 40 41, on right: 15
for (76)
    on left: 42, on right: 40
while (77)
    on left: 43, on right: 41
property_stmt (78)
    on left: 44, on right: 20 21
map (79)
    on left: 45, on right: 61
set (80)
    on left: 46, on right: 63
list (81)
    on left: 47, on right: 54 62
mapbody (82)
    on left: 48 49, on right: 45 48
map_tail (83)
    on left: 50, on right: 48 49
setbody (84)
    on left: 51 52 53, on right: 46 51
listbody (85)
    on left: 54 55 56, on right: 47
list_tail (86)
    on left: 57, on right: 51 52 54 55
element (87)
    on left: 58 59 60 61 62 63, on right: 24 31 32 44 50 57
end (88)
    on left: 64, on right: 9 10 11 12 13


State 0

    0 $accept: . entry $end

    MAIN  shift, and go to state 1

    entry  go to state 2


State 1

    1 entry: MAIN . LPARAN RPARAN LBRACKET functionbody RBRACKET

    LPARAN  shift, and go to state 3


State 2

    0 $accept: entry . $end

    $end  shift, and go to state 4


State 3

    1 entry: MAIN LPARAN . RPARAN LBRACKET functionbody RBRACKET

    RPARAN  shift, and go to state 5


State 4

    0 $accept: entry $end .

    $default  accept


State 5

    1 entry: MAIN LPARAN RPARAN . LBRACKET functionbody RBRACKET

    LBRACKET  shift, and go to state 6


State 6

    1 entry: MAIN LPARAN RPARAN LBRACKET . functionbody RBRACKET

    DIRECTED    shift, and go to state 7
    UNDIRECTED  shift, and go to state 8

    functionbody      go to state 9
    stmt              go to state 10
    graph_definition  go to state 11


State 7

    5 graph_definition: DIRECTED . IDENTIFIER LBRACKET component_list RBRACKET

    IDENTIFIER  shift, and go to state 12


State 8

    6 graph_definition: UNDIRECTED . IDENTIFIER LBRACKET component_list RBRACKET

    IDENTIFIER  shift, and go to state 13


State 9

    1 entry: MAIN LPARAN RPARAN LBRACKET functionbody . RBRACKET

    RBRACKET  shift, and go to state 14


State 10

    2 functionbody: stmt . functionbody
    3             | stmt .

    DIRECTED    shift, and go to state 7
    UNDIRECTED  shift, and go to state 8

    $default  reduce using rule 3 (functionbody)

    functionbody      go to state 15
    stmt              go to state 10
    graph_definition  go to state 11


State 11

    4 stmt: graph_definition .

    $default  reduce using rule 4 (stmt)


State 12

    5 graph_definition: DIRECTED IDENTIFIER . LBRACKET component_list RBRACKET

    LBRACKET  shift, and go to state 16


State 13

    6 graph_definition: UNDIRECTED IDENTIFIER . LBRACKET component_list RBRACKET

    LBRACKET  shift, and go to state 17


State 14

    1 entry: MAIN LPARAN RPARAN LBRACKET functionbody RBRACKET .

    $default  reduce using rule 1 (entry)


State 15

    2 functionbody: stmt functionbody .

    $default  reduce using rule 2 (functionbody)


State 16

    5 graph_definition: DIRECTED IDENTIFIER LBRACKET . component_list RBRACKET

    IFSTATEMENT  shift, and go to state 18
    FOR          shift, and go to state 19
    WHILE        shift, and go to state 20
    IDENTIFIER   shift, and go to state 21
    COMMENT      shift, and go to state 22
    CONNECT      shift, and go to state 23
    PROPERTY     shift, and go to state 24
    VARIABLE     shift, and go to state 25
    VERTEX       shift, and go to state 26
    EDGE         shift, and go to state 27

    $default  reduce using rule 23 (assignment)

    component_list            go to state 28
    component                 go to state 29
    vertex_declaration        go to state 30
    edge_declaration          go to state 31
    graph_object_declaration  go to state 32
    property                  go to state 33
    methodcall                go to state 34
    assignment                go to state 35
    conditional               go to state 36
    if_cond                   go to state 37
    ifelse_cond               go to state 38
    loop                      go to state 39
    for                       go to state 40
    while                     go to state 41


State 17

    6 graph_definition: UNDIRECTED IDENTIFIER LBRACKET . component_list RBRACKET

    IFSTATEMENT  shift, and go to state 18
    FOR          shift, and go to state 19
    WHILE        shift, and go to state 20
    IDENTIFIER   shift, and go to state 21
    COMMENT      shift, and go to state 22
    CONNECT      shift, and go to state 23
    PROPERTY     shift, and go to state 24
    VARIABLE     shift, and go to state 25
    VERTEX       shift, and go to state 26
    EDGE         shift, and go to state 27

    $default  reduce using rule 23 (assignment)

    component_list            go to state 42
    component                 go to state 29
    vertex_declaration        go to state 30
    edge_declaration          go to state 31
    graph_object_declaration  go to state 32
    property                  go to state 33
    methodcall                go to state 34
    assignment                go to state 35
    conditional               go to state 36
    if_cond                   go to state 37
    ifelse_cond               go to state 38
    loop                      go to state 39
    for                       go to state 40
    while                     go to state 41


State 18

   27 if_cond: IFSTATEMENT . LPARAN cond RPARAN LBRACKET component_list RBRACKET
   28 ifelse_cond: IFSTATEMENT . LPARAN cond RPARAN LBRACKET component_list RBRACKET ELSESTATEMENT LBRACKET component_list RBRACKET

    LPARAN  shift, and go to state 43


State 19

   42 for: FOR . LPARAN assignment SEMICOLON cond SEMICOLON assignment RPARAN LBRACKET component_list RBRACKET

    LPARAN  shift, and go to state 44


State 20

   43 while: WHILE . LPARAN cond RPARAN LBRACKET component_list RBRACKET

    LPARAN  shift, and go to state 45


State 21

   21 methodcall: IDENTIFIER . DOT INCLUDEPROPERTY LPARAN property_stmt

    DOT  shift, and go to state 46


State 22

   16 component: COMMENT .

    $default  reduce using rule 16 (component)


State 23

   22 methodcall: CONNECT . LPARAN IDENTIFIER COMMA IDENTIFIER COMMA IDENTIFIER RPARAN

    LPARAN  shift, and go to state 47


State 24

   20 property: PROPERTY . IDENTIFIER ASSIGNMENT LPARAN property_stmt RPARAN

    IDENTIFIER  shift, and go to state 48


State 25

   24 assignment: VARIABLE . ASSIGNMENT element

    ASSIGNMENT  shift, and go to state 49


State 26

   17 vertex_declaration: VERTEX . IDENTIFIER

    IDENTIFIER  shift, and go to state 50


State 27

   18 edge_declaration: EDGE . IDENTIFIER

    IDENTIFIER  shift, and go to state 51


State 28

    5 graph_definition: DIRECTED IDENTIFIER LBRACKET component_list . RBRACKET

    RBRACKET  shift, and go to state 52


State 29

    7 component_list: component . component_list
    8               | component .

    IFSTATEMENT  shift, and go to state 18
    FOR          shift, and go to state 19
    WHILE        shift, and go to state 20
    IDENTIFIER   shift, and go to state 21
    COMMENT      shift, and go to state 22
    CONNECT      shift, and go to state 23
    PROPERTY     shift, and go to state 24
    VARIABLE     shift, and go to state 25
    VERTEX       shift, and go to state 26
    EDGE         shift, and go to state 27

    SEMICOLON  reduce using rule 23 (assignment)
    $default   reduce using rule 8 (component_list)

    component_list            go to state 53
    component                 go to state 29
    vertex_declaration        go to state 30
    edge_declaration          go to state 31
    graph_object_declaration  go to state 32
    property                  go to state 33
    methodcall                go to state 34
    assignment                go to state 35
    conditional               go to state 36
    if_cond                   go to state 37
    ifelse_cond               go to state 38
    loop                      go to state 39
    for                       go to state 40
    while                     go to state 41


State 30

    9 component: vertex_declaration . end

    SEMICOLON  shift, and go to state 54

    end  go to state 55


State 31

   10 component: edge_declaration . end

    SEMICOLON  shift, and go to state 54

    end  go to state 56


State 32

   11 component: graph_object_declaration . end

    SEMICOLON  shift, and go to state 54

    end  go to state 57


State 33

   19 graph_object_declaration: property .

    $default  reduce using rule 19 (graph_object_declaration)


State 34

   12 component: methodcall . end

    SEMICOLON  shift, and go to state 54

    end  go to state 58


State 35

   13 component: assignment . end

    SEMICOLON  shift, and go to state 54

    end  go to state 59


State 36

   14 component: conditional .

    $default  reduce using rule 14 (component)


State 37

   25 conditional: if_cond .

    $default  reduce using rule 25 (conditional)


State 38

   26 conditional: ifelse_cond .

    $default  reduce using rule 26 (conditional)


State 39

   15 component: loop .

    $default  reduce using rule 15 (component)


State 40

   40 loop: for .

    $default  reduce using rule 40 (loop)


State 41

   41 loop: while .

    $default  reduce using rule 41 (loop)


State 42

    6 graph_definition: UNDIRECTED IDENTIFIER LBRACKET component_list . RBRACKET

    RBRACKET  shift, and go to state 60


State 43

   27 if_cond: IFSTATEMENT LPARAN . cond RPARAN LBRACKET component_list RBRACKET
   28 ifelse_cond: IFSTATEMENT LPARAN . cond RPARAN LBRACKET component_list RBRACKET ELSESTATEMENT LBRACKET component_list RBRACKET

    IDENTIFIER  shift, and go to state 61
    FLOAT       shift, and go to state 62
    STRING      shift, and go to state 63
    SLBRACKET   shift, and go to state 64
    BOOLEAN     shift, and go to state 65
    LBRACKET    shift, and go to state 66
    INTEGER     shift, and go to state 67

    $default  reduce using rule 29 (cond)

    cond     go to state 68
    map      go to state 69
    set      go to state 70
    list     go to state 71
    element  go to state 72


State 44

   42 for: FOR LPARAN . assignment SEMICOLON cond SEMICOLON assignment RPARAN LBRACKET component_list RBRACKET

    VARIABLE  shift, and go to state 25

    $default  reduce using rule 23 (assignment)

    assignment  go to state 73


State 45

   43 while: WHILE LPARAN . cond RPARAN LBRACKET component_list RBRACKET

    IDENTIFIER  shift, and go to state 61
    FLOAT       shift, and go to state 62
    STRING      shift, and go to state 63
    SLBRACKET   shift, and go to state 64
    BOOLEAN     shift, and go to state 65
    LBRACKET    shift, and go to state 66
    INTEGER     shift, and go to state 67

    $default  reduce using rule 29 (cond)

    cond     go to state 74
    map      go to state 69
    set      go to state 70
    list     go to state 71
    element  go to state 72


State 46

   21 methodcall: IDENTIFIER DOT . INCLUDEPROPERTY LPARAN property_stmt

    INCLUDEPROPERTY  shift, and go to state 75


State 47

   22 methodcall: CONNECT LPARAN . IDENTIFIER COMMA IDENTIFIER COMMA IDENTIFIER RPARAN

    IDENTIFIER  shift, and go to state 76


State 48

   20 property: PROPERTY IDENTIFIER . ASSIGNMENT LPARAN property_stmt RPARAN

    ASSIGNMENT  shift, and go to state 77


State 49

   24 assignment: VARIABLE ASSIGNMENT . element

    FLOAT      shift, and go to state 62
    STRING     shift, and go to state 63
    SLBRACKET  shift, and go to state 64
    LBRACKET   shift, and go to state 66
    INTEGER    shift, and go to state 67

    map      go to state 69
    set      go to state 70
    list     go to state 71
    element  go to state 78


State 50

   17 vertex_declaration: VERTEX IDENTIFIER .

    $default  reduce using rule 17 (vertex_declaration)


State 51

   18 edge_declaration: EDGE IDENTIFIER .

    $default  reduce using rule 18 (edge_declaration)


State 52

    5 graph_definition: DIRECTED IDENTIFIER LBRACKET component_list RBRACKET .

    $default  reduce using rule 5 (graph_definition)


State 53

    7 component_list: component component_list .

    $default  reduce using rule 7 (component_list)


State 54

   64 end: SEMICOLON .

    $default  reduce using rule 64 (end)


State 55

    9 component: vertex_declaration end .

    $default  reduce using rule 9 (component)


State 56

   10 component: edge_declaration end .

    $default  reduce using rule 10 (component)


State 57

   11 component: graph_object_declaration end .

    $default  reduce using rule 11 (component)


State 58

   12 component: methodcall end .

    $default  reduce using rule 12 (component)


State 59

   13 component: assignment end .

    $default  reduce using rule 13 (component)


State 60

    6 graph_definition: UNDIRECTED IDENTIFIER LBRACKET component_list RBRACKET .

    $default  reduce using rule 6 (graph_definition)


State 61

   31 cond: IDENTIFIER . booleanopr element
   33     | IDENTIFIER . booleanopr IDENTIFIER

    ISEQUAL       shift, and go to state 79
    NOTEQUAL      shift, and go to state 80
    LESS          shift, and go to state 81
    GREATER       shift, and go to state 82
    LESSEQUAL     shift, and go to state 83
    GREATEREQUAL  shift, and go to state 84

    booleanopr  go to state 85


State 62

   59 element: FLOAT .

    $default  reduce using rule 59 (element)


State 63

   60 element: STRING .

    $default  reduce using rule 60 (element)


State 64

   46 set: SLBRACKET . setbody SRBRACKET
   47 list: SLBRACKET . listbody SRBRACKET

    FLOAT      shift, and go to state 62
    STRING     shift, and go to state 63
    SLBRACKET  shift, and go to state 64
    LBRACKET   shift, and go to state 66
    INTEGER    shift, and go to state 67

    SRBRACKET  reduce using rule 53 (setbody)
    SRBRACKET  [reduce using rule 56 (listbody)]
    $default   reduce using rule 53 (setbody)

    map        go to state 69
    set        go to state 70
    list       go to state 86
    setbody    go to state 87
    listbody   go to state 88
    list_tail  go to state 89
    element    go to state 90


State 65

   30 cond: BOOLEAN .

    $default  reduce using rule 30 (cond)


State 66

   45 map: LBRACKET . mapbody RBRACKET

    STRING  shift, and go to state 91

    mapbody   go to state 92
    map_tail  go to state 93


State 67

   58 element: INTEGER .

    $default  reduce using rule 58 (element)


State 68

   27 if_cond: IFSTATEMENT LPARAN cond . RPARAN LBRACKET component_list RBRACKET
   28 ifelse_cond: IFSTATEMENT LPARAN cond . RPARAN LBRACKET component_list RBRACKET ELSESTATEMENT LBRACKET component_list RBRACKET

    RPARAN  shift, and go to state 94


State 69

   61 element: map .

    $default  reduce using rule 61 (element)


State 70

   63 element: set .

    $default  reduce using rule 63 (element)


State 71

   62 element: list .

    $default  reduce using rule 62 (element)


State 72

   32 cond: element . booleanopr IDENTIFIER

    ISEQUAL       shift, and go to state 79
    NOTEQUAL      shift, and go to state 80
    LESS          shift, and go to state 81
    GREATER       shift, and go to state 82
    LESSEQUAL     shift, and go to state 83
    GREATEREQUAL  shift, and go to state 84

    booleanopr  go to state 95


State 73

   42 for: FOR LPARAN assignment . SEMICOLON cond SEMICOLON assignment RPARAN LBRACKET component_list RBRACKET

    SEMICOLON  shift, and go to state 96


State 74

   43 while: WHILE LPARAN cond . RPARAN LBRACKET component_list RBRACKET

    RPARAN  shift, and go to state 97


State 75

   21 methodcall: IDENTIFIER DOT INCLUDEPROPERTY . LPARAN property_stmt

    LPARAN  shift, and go to state 98


State 76

   22 methodcall: CONNECT LPARAN IDENTIFIER . COMMA IDENTIFIER COMMA IDENTIFIER RPARAN

    COMMA  shift, and go to state 99


State 77

   20 property: PROPERTY IDENTIFIER ASSIGNMENT . LPARAN property_stmt RPARAN

    LPARAN  shift, and go to state 100


State 78

   24 assignment: VARIABLE ASSIGNMENT element .

    $default  reduce using rule 24 (assignment)


State 79

   34 booleanopr: ISEQUAL .

    $default  reduce using rule 34 (booleanopr)


State 80

   39 booleanopr: NOTEQUAL .

    $default  reduce using rule 39 (booleanopr)


State 81

   36 booleanopr: LESS .

    $default  reduce using rule 36 (booleanopr)


State 82

   35 booleanopr: GREATER .

    $default  reduce using rule 35 (booleanopr)


State 83

   38 booleanopr: LESSEQUAL .

    $default  reduce using rule 38 (booleanopr)


State 84

   37 booleanopr: GREATEREQUAL .

    $default  reduce using rule 37 (booleanopr)


State 85

   31 cond: IDENTIFIER booleanopr . element
   33     | IDENTIFIER booleanopr . IDENTIFIER

    IDENTIFIER  shift, and go to state 101
    FLOAT       shift, and go to state 62
    STRING      shift, and go to state 63
    SLBRACKET   shift, and go to state 64
    LBRACKET    shift, and go to state 66
    INTEGER     shift, and go to state 67

    map      go to state 69
    set      go to state 70
    list     go to state 71
    element  go to state 102


State 86

   54 listbody: list . COMMA list_tail
   62 element: list .

    COMMA  shift, and go to state 103

    COMMA     [reduce using rule 62 (element)]
    $default  reduce using rule 62 (element)


State 87

   46 set: SLBRACKET setbody . SRBRACKET
   51 setbody: setbody . COMMA list_tail

    COMMA      shift, and go to state 104
    SRBRACKET  shift, and go to state 105


State 88

   47 list: SLBRACKET listbody . SRBRACKET

    SRBRACKET  shift, and go to state 106


State 89

   52 setbody: list_tail .
   55 listbody: list_tail .

    SRBRACKET  reduce using rule 52 (setbody)
    SRBRACKET  [reduce using rule 55 (listbody)]
    $default   reduce using rule 52 (setbody)


State 90

   57 list_tail: element .

    $default  reduce using rule 57 (list_tail)


State 91

   50 map_tail: STRING . COLON element

    COLON  shift, and go to state 107


State 92

   45 map: LBRACKET mapbody . RBRACKET
   48 mapbody: mapbody . COMMA map_tail

    COMMA     shift, and go to state 108
    RBRACKET  shift, and go to state 109


State 93

   49 mapbody: map_tail .

    $default  reduce using rule 49 (mapbody)


State 94

   27 if_cond: IFSTATEMENT LPARAN cond RPARAN . LBRACKET component_list RBRACKET
   28 ifelse_cond: IFSTATEMENT LPARAN cond RPARAN . LBRACKET component_list RBRACKET ELSESTATEMENT LBRACKET component_list RBRACKET

    LBRACKET  shift, and go to state 110


State 95

   32 cond: element booleanopr . IDENTIFIER

    IDENTIFIER  shift, and go to state 111


State 96

   42 for: FOR LPARAN assignment SEMICOLON . cond SEMICOLON assignment RPARAN LBRACKET component_list RBRACKET

    IDENTIFIER  shift, and go to state 61
    FLOAT       shift, and go to state 62
    STRING      shift, and go to state 63
    SLBRACKET   shift, and go to state 64
    BOOLEAN     shift, and go to state 65
    LBRACKET    shift, and go to state 66
    INTEGER     shift, and go to state 67

    $default  reduce using rule 29 (cond)

    cond     go to state 112
    map      go to state 69
    set      go to state 70
    list     go to state 71
    element  go to state 72


State 97

   43 while: WHILE LPARAN cond RPARAN . LBRACKET component_list RBRACKET

    LBRACKET  shift, and go to state 113


State 98

   21 methodcall: IDENTIFIER DOT INCLUDEPROPERTY LPARAN . property_stmt

    STRING  shift, and go to state 114

    property_stmt  go to state 115


State 99

   22 methodcall: CONNECT LPARAN IDENTIFIER COMMA . IDENTIFIER COMMA IDENTIFIER RPARAN

    IDENTIFIER  shift, and go to state 116


State 100

   20 property: PROPERTY IDENTIFIER ASSIGNMENT LPARAN . property_stmt RPARAN

    STRING  shift, and go to state 114

    property_stmt  go to state 117


State 101

   33 cond: IDENTIFIER booleanopr IDENTIFIER .

    $default  reduce using rule 33 (cond)


State 102

   31 cond: IDENTIFIER booleanopr element .

    $default  reduce using rule 31 (cond)


State 103

   54 listbody: list COMMA . list_tail

    FLOAT      shift, and go to state 62
    STRING     shift, and go to state 63
    SLBRACKET  shift, and go to state 64
    LBRACKET   shift, and go to state 66
    INTEGER    shift, and go to state 67

    map        go to state 69
    set        go to state 70
    list       go to state 71
    list_tail  go to state 118
    element    go to state 90


State 104

   51 setbody: setbody COMMA . list_tail

    FLOAT      shift, and go to state 62
    STRING     shift, and go to state 63
    SLBRACKET  shift, and go to state 64
    LBRACKET   shift, and go to state 66
    INTEGER    shift, and go to state 67

    map        go to state 69
    set        go to state 70
    list       go to state 71
    list_tail  go to state 119
    element    go to state 90


State 105

   46 set: SLBRACKET setbody SRBRACKET .

    $default  reduce using rule 46 (set)


State 106

   47 list: SLBRACKET listbody SRBRACKET .

    $default  reduce using rule 47 (list)


State 107

   50 map_tail: STRING COLON . element

    FLOAT      shift, and go to state 62
    STRING     shift, and go to state 63
    SLBRACKET  shift, and go to state 64
    LBRACKET   shift, and go to state 66
    INTEGER    shift, and go to state 67

    map      go to state 69
    set      go to state 70
    list     go to state 71
    element  go to state 120


State 108

   48 mapbody: mapbody COMMA . map_tail

    STRING  shift, and go to state 91

    map_tail  go to state 121


State 109

   45 map: LBRACKET mapbody RBRACKET .

    $default  reduce using rule 45 (map)


State 110

   27 if_cond: IFSTATEMENT LPARAN cond RPARAN LBRACKET . component_list RBRACKET
   28 ifelse_cond: IFSTATEMENT LPARAN cond RPARAN LBRACKET . component_list RBRACKET ELSESTATEMENT LBRACKET component_list RBRACKET

    IFSTATEMENT  shift, and go to state 18
    FOR          shift, and go to state 19
    WHILE        shift, and go to state 20
    IDENTIFIER   shift, and go to state 21
    COMMENT      shift, and go to state 22
    CONNECT      shift, and go to state 23
    PROPERTY     shift, and go to state 24
    VARIABLE     shift, and go to state 25
    VERTEX       shift, and go to state 26
    EDGE         shift, and go to state 27

    $default  reduce using rule 23 (assignment)

    component_list            go to state 122
    component                 go to state 29
    vertex_declaration        go to state 30
    edge_declaration          go to state 31
    graph_object_declaration  go to state 32
    property                  go to state 33
    methodcall                go to state 34
    assignment                go to state 35
    conditional               go to state 36
    if_cond                   go to state 37
    ifelse_cond               go to state 38
    loop                      go to state 39
    for                       go to state 40
    while                     go to state 41


State 111

   32 cond: element booleanopr IDENTIFIER .

    $default  reduce using rule 32 (cond)


State 112

   42 for: FOR LPARAN assignment SEMICOLON cond . SEMICOLON assignment RPARAN LBRACKET component_list RBRACKET

    SEMICOLON  shift, and go to state 123


State 113

   43 while: WHILE LPARAN cond RPARAN LBRACKET . component_list RBRACKET

    IFSTATEMENT  shift, and go to state 18
    FOR          shift, and go to state 19
    WHILE        shift, and go to state 20
    IDENTIFIER   shift, and go to state 21
    COMMENT      shift, and go to state 22
    CONNECT      shift, and go to state 23
    PROPERTY     shift, and go to state 24
    VARIABLE     shift, and go to state 25
    VERTEX       shift, and go to state 26
    EDGE         shift, and go to state 27

    $default  reduce using rule 23 (assignment)

    component_list            go to state 124
    component                 go to state 29
    vertex_declaration        go to state 30
    edge_declaration          go to state 31
    graph_object_declaration  go to state 32
    property                  go to state 33
    methodcall                go to state 34
    assignment                go to state 35
    conditional               go to state 36
    if_cond                   go to state 37
    ifelse_cond               go to state 38
    loop                      go to state 39
    for                       go to state 40
    while                     go to state 41


State 114

   44 property_stmt: STRING . COMMA element

    COMMA  shift, and go to state 125
